# EngDados-USJT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: Atividade 2.ipynb  Aula1.ipynb  Aula3.ipynb  Aula4.ipynb  TrabalhoT2.ipynb  pyproject.toml
