[project]
name = "projeto-ustj-eng-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "kagglehub (>=0.3.10,<0.4.0)",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.6.1",
]
